--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>6. 支持与维护</h2>
 
 <p>如果你有使用gooreplacer方面的任何问题，如果对gooreplacer有什么好的建议，可以在下面留言</p>
-<p>当然，照顾到大家有可能比较害羞，可以邮件<a href="mailto:jiacai2050@gmail.com?subject=gooreplacer建议反馈">jiacai2050#gmail.com</a>交流。:-) </p>
+<p>当然，照顾到大家有可能比较害羞，可以<a href="mailto:jiacai2050@gmail.com?subject=gooreplacer建议反馈">邮件</a>交流。:-) </p>
 
 <div class="ds-thread" data-url="http://liujiacai.net/gooreplacer"></div>
 <script type="text/javascript">
