fix url protocol

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p> 众所周知，Google在某国造到全面封杀，导致无法访问google的一切资源。</p>
 <p> Google在全球范围内提供一些js库、css库的CDN服务，本是一件相当好的事情，但是在某国情况就不一样了</p>
-<p> 如果一个网站引用了Google的这些库（比如<a href="stackoverflow.com">stackoverflow</a>、<a href="reddit.com">reddit</a>）,那么在某国的访问速度那是真慢，不是一般的慢!
+<p> 如果一个网站引用了Google的这些库（比如<a href="http://stackoverflow.com">stackoverflow</a>、<a href="http://reddit.com">reddit</a>）,那么在某国的访问速度那是真慢，不是一般的慢!
 <p> 有图有真相：</p>
 <img src="images/google-slow.png"/>
 <img src="images/google-font-wp.png"/>
