--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print"/>
- 
+    <meta name="description" content="一个用于替换网页中Google Fonts/API/themes等的浏览器插件，让你快速打开引用这些资源的页面" /> 
     <title>gooreplacer</title>
   </head>
 
@@ -22,7 +22,7 @@
     <header>
       <div class="container">
         <h1>gooreplacer</h1>
-        <h2>一个用于替换网页中Google Fonts/API/themes等的Firefox插件，让你快速打开引用这些资源的页面 :-)</h2>
+        <h2>一个用于替换网页中Google Fonts/API/themes等的浏览器插件，让你快速打开引用这些资源的页面 :-)</h2>
       </div>
     </header>
 
