修改安装火狐的链接，用户需要配置后才可使用

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>gooreplacer就是为了解决这种问题而开发的。</p>
 
 <h2>
-<a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>2. gooreplacer是什么</h2>
+<a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>2. gooreplacer是什么?</h2>
 
 <p>gooreplacer是浏览器插件，目前有Firefox版与Chrome版。</p>
 
@@ -59,7 +59,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 </code>
 </pre>
 <h2>
-<a name="why-gooreplacer" class="anchor" href="#why-gooreplacer"><span class="octicon octicon-link"></span></a>3. 为什么要使用gooreplacer</h2>
+<a name="why-gooreplacer" class="anchor" href="#why-gooreplacer"><span class="octicon octicon-link"></span></a>3. 为什么要使用gooreplacer？</h2>
 
 <p>当然，如果你有(tu)钱(hao)，可以购买VPN，那么世界也是很美好！</p>
 
@@ -70,7 +70,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <h2>
 <a name="why-gooreplacer" class="anchor" href="#why-gooreplacer"><span class="octicon octicon-link"></span></a>4. 安装gooreplacer</h2>
 <section id="downloads">
-  <a href="https://addons.mozilla.org/zh-CN/firefox/addon/gooreplacer/" class="btn">Firefox版本</a>
+  <a href="https://github.com/jiacai2050/gooreplacer#install" class="btn">Firefox版本</a>
   <a href="https://github.com/jiacai2050/gooreplacer4chrome#install" class="btn">Chrome版本</a>
 </section>
 
