--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print"/>
+    <link rel="shortcut icon" href="images/favicon.ico" />
+
     <meta name="description" content="一个用于替换网页中Google Fonts/API/themes等的浏览器插件，让你快速打开引用这些资源的页面" /> 
     <title>gooreplacer</title>
   </head>
@@ -82,7 +84,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <h2>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>6. 支持与维护</h2>
 
-<p>如果你有使用gooreplacer方面的任何问题，或对gooreplacer有什么好的建议，可以在下面留言</p>
+<p>如果你有使用gooreplacer方面的任何问题，或有什么好的建议，可以在下面留言</p>
 <p>当然，照顾到大家有可能比较害羞，可以<a href="mailto:jiacai2050@gmail.com?subject=gooreplacer建议反馈">邮件</a>交流。:-) </p>
 
 <div class="ds-thread" data-url="http://liujiacai.net/gooreplacer"></div>
