--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print"/>
     <link rel="shortcut icon" href="images/favicon.ico" />
 
-    <meta name="description" content="一个用于替换网页中Google Fonts/API/themes等的浏览器插件，让你快速打开引用这些资源的页面" /> 
+    <meta name="description" content="一个用于替换网页中Google Fonts/APIS/themes等的浏览器插件，让你快速打开引用这些资源的页面" /> 
     <title>gooreplacer</title>
   </head>
 
@@ -24,7 +24,7 @@
     <header>
       <div class="container">
         <h1>gooreplacer</h1>
-        <h2>一个用于替换网页中Google Fonts/API/themes等的浏览器插件，让你快速打开引用这些资源的页面 :-)</h2>
+        <h2>一个用于替换网页中Google Fonts/APIS/themes等的浏览器插件，让你快速打开引用这些资源的页面 :-)</h2>
       </div>
     </header>
 
@@ -65,7 +65,15 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 
 <p>当然，如果你有(tu)钱(hao)，可以购买VPN，那么世界也是很美好！</p>
 
-<p>但如果你一直用的是免费的vpn、goagent等，那么gooreplacer绝对适合你，gooreplacer可以让你很快的打开一些wordpress博客，秒开stackoverflow、reddit......</p>
+<p>但如果你一直用的是免费的vpn、goagent等，那么gooreplacer绝对适合你，gooreplacer可以让你秒开：</p>
+<ul>
+    <li><a href="http://www.webhek.com/remove-wordpress-google-fonts/">一些wordpress博客</a></li>
+    <li><a href="http://stackoverflow.com/">stackoverflow</a></li>
+    <li><a href="http://www.reddit.com/">reddit</a></li>
+    <li><a href="http://hexo.io/">hexo</a></li>
+    <li><a href="http://expressjs.com/">expressjs</a></li>
+    <li>.......</li>
+</ul>
 
 <p>世界是残酷的， 我们(programmer)有理由把它变得美好些。Enjoy！</p>
 
@@ -84,8 +92,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <h2>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>6. 支持与维护</h2>
 
-<p>如果你有使用gooreplacer方面的任何问题，或有什么好的建议，可以在下面留言</p>
-<p>当然，照顾到大家有可能比较害羞，可以<a href="mailto:jiacai2050@gmail.com?subject=gooreplacer建议反馈">邮件</a>交流。:-) </p>
+<p>如果你有使用gooreplacer方面的任何问题，或有什么好的建议，可以在下面留言。当然，照顾到大家有可能比较害羞，可以<a href="mailto:jiacai2050@gmail.com?subject=gooreplacer建议反馈">邮件</a>交流。:-) </p>
 
 <div class="ds-thread" data-url="http://liujiacai.net/gooreplacer"></div>
 <script type="text/javascript">
