更新作者链接与添加一起改进完善

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <h2>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>5. 作者与贡献者</h2>
 
-<p>gooreplacer由<a class="user-mention" href="http://liujiacai.net">@我</a>一个人独立开发，当然少不了网友的支持，这里要感谢V2EX的<a href="http://v2ex.com/member/jzhone" class="user-mention">@jzhone</a>耐心为gooreplacer测试，并推荐使用科大库。</p>
+<p>gooreplacer由<a class="user-mention" href="http://liujiacai.net/about">@我</a>一个人独立开发，当然少不了网友的支持，这里要感谢V2EX的<a href="http://v2ex.com/member/jzhone" class="user-mention">@jzhone</a>耐心为gooreplacer测试，并推荐使用科大库。</p>
 
 <h2>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>6. 支持与维护</h2>
 
-<p>如果你有使用gooreplacer方面的任何问题，或有什么好的建议，可以在下面留言。当然，照顾到大家有可能比较害羞，可以<a href="mailto:jiacai2050@gmail.com?subject=gooreplacer建议反馈">邮件</a>交流。:-) </p>
+<p>如果你有使用gooreplacer方面的任何问题，或有什么好的建议，可以在下面留言。让我们一起改进、完善gooreplacer。当然，照顾到大家有可能比较害羞，可以<a href="mailto:jiacai2050@gmail.com?subject=gooreplacer建议反馈">邮件</a>交流。:-) </p>
 
 <div class="ds-thread" data-url="http://liujiacai.net/gooreplacer"></div>
 <script type="text/javascript">
