--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <ol>
     <li><a href="http://www.webhek.com/remove-wordpress-google-fonts/">一些wordpress博客</a></li>
     <li><a href="http://stackoverflow.com/">stackoverflow</a></li>
+    <li><a href="http://sourceforge.net/">sourceforge</a></li>
     <li><a href="http://www.reddit.com/">reddit</a></li>
     <li><a href="http://hexo.io/">hexo</a></li>
     <li><a href="http://expressjs.com/">expressjs</a></li>
@@ -87,7 +88,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <h2>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>5. 作者与贡献者</h2>
 
-<p>gooreplacer由<a class="user-mention" href="http://liujiacai.net/about">@我</a>一个人独立开发，当然少不了网友的支持，这里要感谢V2EX的<a href="http://v2ex.com/member/jzhone" class="user-mention">@jzhone</a>耐心为gooreplacer测试，并推荐使用科大库。</p>
+<p>gooreplacer由<a class="user-mention" href="http://liujiacai.net/about">@我</a>一个人独立开发，当然少不了网友的支持：感谢V2EX的<a href="http://v2ex.com/member/jzhone" class="user-mention">@jzhone</a>耐心为gooreplacer测试，并推荐使用科大库；感谢<a href="http://v2ex.com/member/Semidio" class="user-metion">@Semidio</a>把Chrome版本上传到<a href="https://chrome.google.com/webstore/detail/jlmmdfhaddlgkgcigccmlfhapliiacoh">WebStore应用商店</a>中去。</p>
 
 <h2>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>6. 支持与维护</h2>
