--- a/index.html
+++ b/index.html
@@ -79,16 +79,21 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <p>世界是残酷的， 我们(programmer)有理由把它变得美好些。Enjoy！</p>
 
 <h2>
-<a name="why-gooreplacer" class="anchor" href="#why-gooreplacer"><span class="octicon octicon-link"></span></a>4. 安装gooreplacer</h2>
+<a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>4. 安装gooreplacer</h2>
 <section id="downloads">
   <a href="https://github.com/jiacai2050/gooreplacer#install" class="btn">Firefox版本</a>
   <a href="https://github.com/jiacai2050/gooreplacer4chrome#install" class="btn">Chrome版本</a>
 </section>
-
+<p>gooreplacer Firefox版本0.5新增自定义规则功能，但是mozilla官方审查实在是太慢了，都一周了，还是在排队，大家可以去<a href="https://addons.mozilla.org/zh-CN/firefox/addon/gooreplacer/versions/">这里</a>下载0.5版本尝鲜。</p>
 <h2>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>5. 作者与贡献者</h2>
 
-<p>gooreplacer由<a class="user-mention" href="http://liujiacai.net/about">@我</a>一个人独立开发，当然少不了网友的支持：感谢V2EX的<a href="http://v2ex.com/member/jzhone" class="user-mention">@jzhone</a>耐心为gooreplacer测试，并推荐使用科大库；感谢<a href="http://v2ex.com/member/Semidio" class="user-metion">@Semidio</a>把Chrome版本上传到<a href="https://chrome.google.com/webstore/detail/jlmmdfhaddlgkgcigccmlfhapliiacoh">WebStore应用商店</a>中去。</p>
+<p>gooreplacer由<a class="user-mention" href="http://liujiacai.net/about">@我</a>一个人独立开发，当然少不了网友的支持：</p>
+<ol>
+<li>感谢<a href="http://v2ex.com/member/jzhone" class="user-mention">@jzhone</a>耐心为gooreplacer测试，并推荐使用科大库；</li>
+<li>感谢<a href="http://v2ex.com/member/Semidio" class="user-metion">@Semidio</a>把Chrome版本上传到<a href="https://chrome.google.com/webstore/detail/jlmmdfhaddlgkgcigccmlfhapliiacoh">WebStore应用商店</a>中去；</li>
+<li>感谢<a href="http://weibo.com/imancao" class="user-metion">@艾蔓草</a>为gooreplacer提的建议与测试。</li>
+</ol>
 
 <h2>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>6. 支持与维护</h2>
