更新版本号说明

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
   <a href="https://github.com/jiacai2050/gooreplacer#install" class="btn">Firefox版本</a>
   <a href="https://github.com/jiacai2050/gooreplacer4chrome#install" class="btn">Chrome版本</a>
 </section>
-<p>gooreplacer Firefox版本0.5新增自定义规则功能，但是mozilla官方审查实在是太慢了，都一周了，还是在排队，大家可以去<a href="https://addons.mozilla.org/zh-CN/firefox/addon/gooreplacer/versions/">这里</a>下载0.5版本尝鲜。</p>
+<p>gooreplacer Firefox版本0.6新增自定义规则功能，但是mozilla官方审查实在是太慢了，都三周了，还是在排队，大家可以去<a href="https://addons.mozilla.org/zh-CN/firefox/addon/gooreplacer/versions/">这里</a>下载0.6版本尝鲜。</p>
 <h2>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>5. 作者与贡献者</h2>
 
