--- a/src/data/options.html
+++ b/src/data/options.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="jquery-1.6.2.min.js"></script>
+    <script type="text/javascript" src="db.js"></script>
     <script type="text/javascript" src="options.js"></script>
 </head>
 <body>
@@ -19,6 +20,7 @@
     <button id="import">导入</button>
     <button id="export">导出</button>
     <button id="help">帮助</button>
+    <input type="file" id="gsonChooser" accept=".gson" style="display:none" />
 
 </div>
 
