--- a/src/data/options.html
+++ b/src/data/options.html
@@ -3,12 +3,12 @@
 <html>
 <head>
     <title>gooreplacer自定义规则</title>
-    <link rel="shortcut icon" href="gooreplacer.ico">
+    <link rel="shortcut icon" href="img/gooreplacer.ico">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="jquery-1.6.2.min.js"></script>
-    <script type="text/javascript" src="db.js"></script>
-    <script type="text/javascript" src="options.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/options.css">
+    <script type="text/javascript" src="js/jquery-1.6.2.min.js"></script>
+    <script type="text/javascript" src="js/db.js"></script>
+    <script type="text/javascript" src="js/options.js"></script>
 </head>
 <body>
 
