remove download permission

--- a/src/data/options.html
+++ b/src/data/options.html
@@ -21,6 +21,7 @@
     <button id="export">导出</button>
     <button id="help">帮助</button>
     <input type="file" id="gsonChooser" accept=".gson" style="display:none" />
+    <a id="gsonExport" style="display:none" download="gooreplacer.gson"></a>
 
 </div>
 
