shitf delete button

--- a/src/data/options.html
+++ b/src/data/options.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/options.css">
     <script type="text/javascript" src="js/jquery-1.6.2.min.js"></script>
     <script type="text/javascript" src="js/db.js"></script>
+    <script type="text/javascript" src="js/jquery.shiftcheckbox.js"></script>
     <script type="text/javascript" src="js/options.js"></script>
 </head>
 <body>
@@ -54,6 +55,7 @@
 <div class="centered">
     <button id="more">更多</button>
     <button id="ok">确定</button>
+    <button id="shiftDel">批量删除</button>
 </div>
 <div class="line"></div>
 <div class="centered">
