--- a/src/data/options.html
+++ b/src/data/options.html
@@ -5,8 +5,16 @@
     <title>gooreplacer自定义规则</title>
     <link rel="shortcut icon" href="img/gooreplacer.ico">
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="css/dataTables.tableTools.css">
+    <link rel="stylesheet" type="text/css" href="css/dataTables.editor.min.css">
     <link rel="stylesheet" type="text/css" href="css/options.css">
     <script type="text/javascript" src="js/jquery-1.6.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.js"></script>
+    <script type="text/javascript" src="js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="js/dataTables.tableTools.min.js"></script>
+    <script type="text/javascript" src="js/dataTables.editor.min.js"></script>
     <script type="text/javascript" src="js/db.js"></script>
     <script type="text/javascript" src="js/jquery.shiftcheckbox.js"></script>
     <script type="text/javascript" src="js/options.js"></script>
@@ -62,5 +70,20 @@
     <h3>系统中已有以下规则</h3>
 </div>
 <table id="list" align="center"></table>
+<p>-----------------------</p><br>
+<table cellpadding="0" cellspacing="0" border="0" class="display" id="example" width="100%">
+        <thead>
+            <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Phone</th>
+                <th>City</th>
+                <th>Zip</th>
+                <th>Active</th>
+            </tr>
+        </thead>
+    </table>
+
+
 </body>
 </html>
