--- a/src/data/options.html
+++ b/src/data/options.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>gooreplacer自定义规则</title>
     <link rel="shortcut icon" href="img/gooreplacer.ico">
@@ -25,18 +25,17 @@
     <a id="gsonExport" style="display:none" download="gooreplacer.gson"></a>
 
 </div>
-
-<div id="config" class="dialog">
-    <h2>使用帮助</h2>
-    <ol>
-        <li>每条重定向规则有“开启/停用”两种状态</li>
-        <li>在自定义规则时，可以使用通配符*，来进行模糊匹配</li>
-        <li>在自定义规则时，不能包含 (, ), [, ], {, }, ?, \, + 这些特殊字符</li>
-        <li>使用“导出”功能，可以把当前的重定向规则导出到本地</li>
-        <li>使用“导入”功能，可以从本地加载重定向规则</li>
-    </ol>
-    <div class="button-row">
-        <button id="close">关闭</button>
+<div class="container Absolute-Center" id="config" style="display: none">
+    <div class="jumbotron col-xs-7 col-xs-offset-3">
+        <h2>使用帮助</h2>
+        <ol>
+            <li>每条重定向规则有“开启/停用”两种状态</li>
+            <li>在自定义规则时，可以使用通配符*，来进行模糊匹配</li>
+            <li>在自定义规则时，不能包含 (, ), [, ], {, }, ?, \, + 这些特殊字符</li>
+            <li>使用“导出”功能，可以把当前的重定向规则导出到本地</li>
+            <li>使用“导入”功能，可以从本地加载重定向规则</li>
+        </ol>
+        <button class="btn btn-success center-block" id="close">关闭</button>
     </div>
 </div>
 <table id="rules" align="center">
@@ -62,7 +61,7 @@
     <h3>系统中已有以下规则</h3>
 </div>
 <div class="container">
-<table id="list" class="col-xs-10 col-xs-offset-0 table table-striped table-hover table-condensed" ></table>
+    <table id="list" class="col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-1 table-striped table-hover table-condensed"></table>
 </div>
 </body>
 </html>
