--- a/src/data/options.html
+++ b/src/data/options.html
@@ -38,6 +38,9 @@
         <button class="btn btn-success center-block" id="close">关闭</button>
     </div>
 </div>
+<div id='debug'>
+<input id='test' type='text'></input><button class='btn btn-warning' id='testButton'>testButton</button>
+</div>
 <table id="rules" align="center">
     <tr>
         <th>
