--- a/src/data/options.html
+++ b/src/data/options.html
@@ -40,6 +40,8 @@
 </div>
 <div id='debug'>
 <input id='test' type='text'></input><button class='btn btn-warning' id='testButton'>testButton</button>
+<button class="btn btn-success" id='restoreDB'>重置数据库</button>
+
 </div>
 <table id="rules" align="center">
     <tr>
