--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
   <a href="https://github.com/jiacai2050/gooreplacer#install" class="btn">Firefox版本</a>
   <a href="https://github.com/jiacai2050/gooreplacer4chrome#install" class="btn">Chrome版本</a>
 </section>
-<p>gooreplacer Firefox版本0.6新增自定义规则功能，但是mozilla官方审查实在是太慢了，都三周了，还是在排队，大家可以去<a href="https://addons.mozilla.org/zh-CN/firefox/addon/gooreplacer/versions/">这里</a>下载0.6版本尝鲜。</p>
 <h2>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>5. 作者与贡献者</h2>
 
@@ -111,15 +110,13 @@ var duoshuoQuery = {short_name:"gooreplacer"};
         (document.getElementsByTagName('head')[0] 
          || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
-    </script>
-<!-- 多说公共JS代码 end -->
-<script type="text/javascript">
     var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
     document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb0b1b4cd028dcda54126eddc8346a00c' type='text/javascript'%3E%3C/script%3E"));
-    </script>
+    var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cspan id='cnzz_stat_icon_1254310123'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1254310123%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
+</script>
     </div>
 
-    
   </body>
 </html>
 
