--- a/src/data/options.html
+++ b/src/data/options.html
@@ -29,10 +29,9 @@
     <h2>使用帮助</h2>
     <ol>
         <li>每条重定向规则有“开启/停用”两种状态</li>
-        <li>在自定义规则时，可以使用通配符*，来进行模糊匹配</li>
-        <li>在自定义规则时，不能包含 (, ), [, ], {, }, ?, \, + 这些特殊字符</li>
         <li>使用“导出”功能，可以把当前的重定向规则导出到本地</li>
         <li>使用“导入”功能，可以从本地加载重定向规则</li>
+        <li>关于如何用自定义重定向，可以去<a href="https://github.com/jiacai2050/gooreplacer#diy" target="_blank">github查看说明</a>。</li>
     </ol>
     <div class="button-row">
         <button id="close">关闭</button>
@@ -43,7 +42,7 @@
         <th>
             原始URL
         </th>
-        <th></th>    
+        <th>类型</th>    
         <th>
             目的URL
         </th>    
