--- a/src/data/popup.html
+++ b/src/data/popup.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <div class="group">
-    <label>
+    <label style="white-space: nowrap">
         <input type="checkbox" id="toggle" />开启重定向
     </label>
 </div>
