--- a/src/data/options.html
+++ b/src/data/options.html
@@ -12,52 +12,45 @@
 </head>
 <body>
 
-<h1>gooreplacer</h1>
-<h5>想去哪儿，就去哪儿</h5>
+    <h1>gooreplacer</h1>
+    <h5>想去哪儿，就去哪儿</h5>
 
-<div class="actions">
-    <button id="homepage">主页</button>
-    <button id="import">导入</button>
-    <button id="export">导出</button>
-    <button id="help">帮助</button>
-    <input type="file" id="gsonChooser" accept=".gson" style="display:none" />
-    <a id="gsonExport" style="display:none" download="gooreplacer.gson"></a>
-
-</div>
-
-<div id="config" class="dialog">
-    <h2>使用帮助</h2>
-    <ol>
-        <li>每条重定向规则有“开启/停用”两种状态</li>
-        <li>使用“导出”功能，可以把当前的重定向规则导出到本地</li>
-        <li>使用“导入”功能，可以从本地加载重定向规则</li>
-        <li>关于如何用自定义重定向，可以去<a href="https://github.com/jiacai2050/gooreplacer#diy" target="_blank">github查看说明</a>。</li>
-    </ol>
-    <div class="button-row">
-        <button id="close">关闭</button>
+    <div class="nav">
+        <button id="homepage">主页</button>
+        <button id="import">导入</button>
+        <button id="export">导出</button>
+        <button id="help">帮助</button>
+        <input type="file" id="gsonChooser" accept=".gson" style="display:none" />
+        <a id="gsonExport" style="display:none" download="gooreplacer.gson"></a>
     </div>
-</div>
-<table id="rules" align="center">
-    <tr>
-        <th>
-            原始URL
-        </th>
-        <th>类型</th>    
-        <th>
-            目的URL
-        </th>    
-    </tr>
 
-</table>
-
-<div class="centered">
-    <button id="more">更多</button>
-    <button id="ok">确定</button>
-</div>
-<div class="line"></div>
-<div class="centered">
-    <h3>系统中已有以下规则</h3>
-</div>
-<table id="list" align="center"></table>
+    <div id="config" class="dialog">
+        <h2>使用帮助</h2>
+        <ol>
+            <li>每条重定向规则有“开启/停用”两种状态</li>
+            <li>使用“导出”功能，可以把当前的重定向规则导出到本地</li>
+            <li>使用“导入”功能，可以从本地加载重定向规则</li>
+            <li>关于如何用自定义重定向，可以去<a href="https://github.com/jiacai2050/gooreplacer#diy" target="_blank">github查看说明</a>。</li>
+        </ol>
+        <div class="button-row">
+            <button id="close">关闭</button>
+        </div>
+    </div>
+    <table id="rules" class="gridtable" align="center">
+        <thead>
+            <tr>
+                <th>原始URL</th>
+                <th>类型</th>    
+                <th>目的URL</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+        <tfoot>
+            <tr>
+                <td colspan="4"><img src='img/add.png' id='add' title='新增' style='cursor: pointer;'/></td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
