--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print"/>
     <link rel="shortcut icon" href="images/favicon.ico" />
 
     <meta name="description" content="一个用于替换网页中Google Fonts/APIS/themes等的浏览器插件，让你快速打开引用这些资源的页面" /> 
@@ -117,6 +116,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <p>如果你有使用gooreplacer方面的任何问题，或有什么好的建议，可以在下面留言。让我们一起改进、完善gooreplacer。</p>
 <p>当然，照顾到大家有可能比较害羞，可以<a href="mailto:jiacai2050@gmail.com?subject=gooreplacer建议反馈">邮件</a>交流。:-) </p>
 
+<div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = 'gooreplacer';
@@ -132,6 +132,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
     var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
     document.write(unescape("%3Cspan id='cnzz_stat_icon_1254310123'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1254310123%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
 </script>
+</div>
   </body>
 </html>
 
