update android link

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <h2>
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>4. 安装gooreplacer</h2>
 <section id="downloads">
-  <a href="https://github.com/jiacai2050/gooreplacer#install" class="btn">Firefox版本</a>
-  <a href="https://github.com/jiacai2050/gooreplacer4chrome#install" class="btn">Chrome版本</a>
+  <a href="https://github.com/jiacai2050/gooreplacer#install" class="btn">Firefox PC 版</a>
+  <a href="https://github.com/jiacai2050/gooreplacer/tree/android" class="btn">Firefox Android 版</a>
+  <a href="https://github.com/jiacai2050/gooreplacer4chrome#install" class="btn">Chrome 版</a>
 </section>
 <h2>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>5. 作者与贡献者</h2>
