remove http in disqus js

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
     var duoshuoQuery = {short_name:"gooreplacer"};
     (function() {
         var d = document, s = d.createElement('script');
-        s.src = 'http://gooreplacer.disqus.com/embed.js';
+        s.src = '//gooreplacer.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
