--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen"/>
     <link rel="shortcut icon" href="images/favicon.ico" />
 
-    <meta name="description" content="一个用于替换网页中Google Fonts/APIS/themes等的浏览器插件，让你快速打开引用这些资源的页面" /> 
+    <meta name="description" content="一个用于替换网页中Google Fonts/APIS/themes等的浏览器插件，让你快速打开引用这些资源的页面" />
     <title>gooreplacer</title>
     <script type="text/javascript">
     var sizes = [240, 430];
@@ -20,7 +20,7 @@
         o.height = sizes[i];
         o.style.cursor = cursors[i];
     }
-    
+
     </script>
   </head>
 
@@ -30,7 +30,7 @@
     var jiathis_config = {data_track_clickback:'true'};
     </script>
     <script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?type=left&amp;move=0&amp;btn=l1.gif&amp;uid=1567950" charset="utf-8"></script>
-    <!-- JiaThis Button END -->   
+    <!-- JiaThis Button END -->
     <a href="https://github.com/jiacai2050/gooreplacer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
     <header>
       <div class="container">
@@ -102,7 +102,7 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 <p>gooreplacer由<a class="user-mention" href="http://liujiacai.net/about">@我</a>一个人独立开发，当然少不了网友的支持：</p>
 <ol>
 <li>感谢<a href="http://v2ex.com/member/jzhone" class="user-mention">@jzhone</a>耐心为gooreplacer测试，并推荐使用科大库；</li>
-<li>感谢<a href="http://v2ex.com/member/Semidio" class="user-metion">@Semidio</a>把Chrome版本上传到<a href="https://chrome.google.com/webstore/detail/jlmmdfhaddlgkgcigccmlfhapliiacoh">WebStore应用商店</a>中去；</li>
+<li>感谢<a href="http://v2ex.com/member/Semidio" class="user-metion">@Semidio</a>曾把Chrome版本上传到<a href="https://chrome.google.com/webstore/detail/gooreplacer/jnlkjeecojckkigmchmfoigphmgkgbip">WebStore应用商店</a>中去，现已转交到我的 Google 账户下；</li>
 <li>感谢<a href="http://weibo.com/imancao" class="user-metion">@艾蔓草</a>为gooreplacer提的建议与测试。</li>
 </ol>
 
@@ -133,4 +133,3 @@ fonts.gstatic.com----------------->fonts-gstatic.lug.ustc.edu.cn
 </script>
   </body>
 </html>
-
