在线规则增加关闭更新功能

--- a/src/data/options.html
+++ b/src/data/options.html
@@ -62,10 +62,8 @@
                     <label class="col-sm-2 control-label">更新频率</label>
                     <div class="col-sm-2">
                         <select class="form-control" id="onlineInterval">
-                            <option value="15">15 分钟</option>
-                            <option value="30">30 分钟</option>
-                            <option value="45">45 分钟</option>
-                            <option value="60" selected>1 小时</option>
+                            <option value="0">关闭</option>
+                            <option value="60">1 小时</option>
                             <option value="180">3 小时</option>
                             <option value="360">6 小时</option>
                             <option value="720">12 小时</option>
@@ -121,7 +119,7 @@
                         <li>每条重定向规则有“开启/停用”两种状态</li>
                         <li>使用“导出”功能，可以把当前的重定向规则导出到本地</li>
                         <li>使用“导入”功能，可以从本地加载重定向规则</li>
-                        <li>关于如何用自定义重定向，可以去<a href="https://github.com/jiacai2050/gooreplacer#diy" target="_blank">github查看说明</a>。</li>
+                        <li>自定义重定向规则，可以参考 Github 上的<a href="https://github.com/jiacai2050/gooreplacer4chrome#usage" target="_blank">使用说明</a>。</li>
                     </ol>
                 </div>
                 <div class="modal-footer">
