--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
 
     <div class="container">
       <section id="main_content">
-        <h2>
-<a name="backgroud" class="anchor" href="#backgroud"><span class="octicon octicon-link"></span></a> Why gooreplacer</h2>
 
-<p> Gooreplacer is first created for redirecting Google Ajax/Api/Themes to other CDN since Google is blocked in my home. 😭</p>
+<p> Gooreplacer is an Firefox/Chrome extension. </p>
+<p> At first it's created for redirecting Google Ajax/Api/Themes to other CDN to bypass <a href="https://en.wikipedia.org/wiki/Great_Firewall">Great Firewall</a> since pages referring those are slow as molasses.</p>
+
 <p> For now, more features have been added to it, mainly:
     <ol>
         <li>Block url</li>
         <li>Modify Headers</li>
-        <li>Test custom rule</li>
-        <li>A new UI built with ClojureScript + Reagent</li>
+        <li>Test user-defined rule</li>
+        <li>A new UI built with ClojureScript + Reagent ❤️</li>
     </ol>
+
+<p>I think gooreplacer stands out from other similar extensions for ease-of-use. Why not give it a try?</p>
 
 <img src="images/ui.png">
 <h2>
